2012-01-18  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Remove configure option ‘--disable-standalone-compat’.

	This reverts the misfeature introduced 2011-10-30,
	"Add configure option ‘--disable-standalone-compat’".

	* configure.ac (standalone-compat): Delete AC_ARG_ENABLE.
	(BINBLOAT): Delete AM_CONDITIONAL.
	(DEFSHELLFUNCS): Delete AC_SUBST.

2012-01-13  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Invoke diff(1) with ‘--label’ instead of ‘-L’.

	GNU diff(1) support for ‘-L’ is transient.  Reported by Paul Eggert:
	<http://lists.gnu.org/archive/html/bug-rcs/2012-01/msg00007.html>.

	* configure.ac (rcs_cv_options_diff_l):
	Check ‘diff --label’ instead of ‘diff -L’.

2012-01-13  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[doc] Explicitly declare UTF-8 correctly.

	This is what 2011-12-27, "Explicitly declare UTF-8" failed to do.

	* doc/rcs.texi <header>: Move ‘@documentencoding’
	after ‘@setfilename’; say ‘UTF-8’ instead of ‘utf-8’.

2012-01-01  Karl Berry  <karl@freefriends.org>  (tiny change)

	[doc] Expand "related projects" blurb; correct misunderstanding.

	* doc/rcs.texi (Overview): Replace CVS plug with paragraph
	mentioning Bazaar, CVS, Subversion and Git; include URL
	for Bazaar; don't say "GNU CVS" since CVS is not GNU.

2011-12-29  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Use gnulib module ‘getopt-gnu’.

	* m4/gnulib-cache.m4 (gl_MODULES): Add ‘getopt-gnu’.

2011-12-27  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[doc] Explicitly declare UTF-8.

	* doc/rcs.texi <header>: Add ‘@documentencoding utf-8’.

2011-10-30  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Add configure option ‘--disable-standalone-compat’.

	* configure.ac (standalone-compat): New AC_ARG_ENABLE.
	(BINBLOAT): New AM_CONDITIONAL.
	(DEFSHELLFUNCS): New AC_SUBST.

2011-10-30  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[doc] Describe grcs in the manual.

	* doc (SUPER): New @set.
	(super): New macro.
	(Usage): Add ‘@value{SUPER}’ to the menu.
	(@value{SUPER}): New node.
